Reversed changes to Java 16 Stream.toList().